my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/WWRNSTMT/T_WWRNSTMT-struct.h
/* Generated by dmlc, do not edit! */

#ifndef T_WWRNSTMT_STRUCT_H
#define T_WWRNSTMT_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_WWRNSTMT(void);


#endif /* not T_WWRNSTMT_STRUCT_H */
